--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,6 @@
 # Convex (see .env.local for your deployment)
-# CONVEX_DEPLOYMENT=
-# VITE_CONVEX_URL=
+CONVEX_DEPLOYMENT=
+VITE_CONVEX_URL=
 
 # LinkedIn import pipeline (used by Convex actions)
 # Set in Convex Dashboard → Settings → Environment Variables for production.
@@ -8,8 +8,10 @@
 LINKDAPI_API_KEY=
 LINKEDIN_PROVIDER=linkdapi
 
-# AI normalization for search arrays (optional). Set LLM_PROVIDER=claude or gemini.
-# Omit or set to "off" to skip normalization and use raw arrays.
-LLM_PROVIDER=off
+# AI normalization for search arrays (optional). Set to enable Claude normalization.
+# Omit to skip normalization and use raw arrays.
 ANTHROPIC_API_KEY=
-GEMINI_API_KEY=
+
+# Pipeline e2e test mode: mock LinkedIn provider and normalizer so cron/pipeline run without API keys.
+# Set to "true" in Convex env (or .env.local for local dev), then use importQueue.seedTestQueue(orgId).
+PIPELINE_TEST_MODE=
