big bad super vibe boom

--- a/convex/tsconfig.json
+++ b/convex/tsconfig.json
@@ -15,6 +15,10 @@
     /* These compiler options are required by Convex */
     "target": "ESNext",
     "lib": ["ES2021", "dom"],
+    "baseUrl": "..",
+    "paths": {
+      "@convex/*": ["./convex/*"]
+    },
     "forceConsistentCasingInFileNames": true,
     "module": "ESNext",
     "isolatedModules": true,
