--- a/package.json
+++ b/package.json
@@ -28,12 +28,14 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "convex": "^1.27.3",
+    "framer-motion": "^12.34.3",
     "lucide-react": "^0.561.0",
+    "motion": "^12.34.3",
     "nitro": "npm:nitro-nightly@latest",
     "radix-ui": "^1.4.3",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
-    "tailwind-merge": "^3.0.2",
+    "tailwind-merge": "^3.4.1",
     "tailwindcss": "^4.1.18",
     "tw-animate-css": "^1.3.6",
     "vite-tsconfig-paths": "^5.1.4",
