auth + home page ui

--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,12 @@
 # Convex (see .env.local for your deployment)
 CONVEX_DEPLOYMENT=
 VITE_CONVEX_URL=
+# Same as VITE_CONVEX_URL but ends in .site (for auth proxy)
+VITE_CONVEX_SITE_URL=
+# Local site URL (e.g. http://localhost:3000)
+VITE_SITE_URL=
+
+# Better Auth (set in Convex: npx convex env set BETTER_AUTH_SECRET=... && npx convex env set SITE_URL=...)
 
 # LinkedIn import pipeline (used by Convex actions)
 # Set in Convex Dashboard → Settings → Environment Variables for production.
