--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "@convex-dev/react-query": "0.1.0",
     "@tailwindcss/vite": "^4.1.18",
     "@tanstack/react-devtools": "^0.7.0",
-    "@tanstack/react-form": "^1.0.0",
+    "@tanstack/react-form": "^1.28.3",
+    "@tanstack/react-form-start": "^1.28.3",
     "@tanstack/react-query": "^5.66.5",
     "@tanstack/react-query-devtools": "^5.84.2",
     "@tanstack/react-router": "^1.132.0",
@@ -28,7 +29,8 @@
     "better-auth": "^1.4.9",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
-    "convex": "^1.27.3",
+    "common-tags": "^1.8.2",
+    "convex": "^1.32.0",
     "framer-motion": "^12.34.3",
     "lucide-react": "^0.561.0",
     "motion": "^12.34.3",
